# Webex-Chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  webex-presales-assistant-design-guide.md
app/: __init__.py  config.py  main.py
app/core/: __init__.py  exceptions.py  logging.py
app/handlers/: __init__.py  command_handler.py  message_handler.py  webhook_handler.py
app/models/: __init__.py  llm.py  tools.py  user.py  webex.py
app/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py  registry.py
app/services/: __init__.py  history_service.py  llm_service.py  mcp_service.py  user_service.py  webex_service.py
app/utils/: __init__.py  markdown_detector.py  message_chunker.py  tool_converter.py
scripts/: setup_webhook.py  test_providers.py
tests/: __init__.py  conftest.py
